<resources>
    <string name="app_name">Where to Eat</string>
    <string name="find_my_location">Find my location</string>
    <string name="min_radius_distance">0,5 km</string>
    <string name="max_radius_distance">10 km</string>
    <string name="cheap_price_range">Cheap price range</string>
    <string name="inexpensive_price_range">Inexpensive price range</string>
    <string name="reasonable_price_range">Reasonable price range</string>
    <string name="expensive_price_range">Expensive price range</string>
    <string name="radius_range_slider">Radius range slider</string>
    <string name="find_a_place_to_eat">Find a place to eat</string>
    <string name="gps_icon">Gps icon</string>
    <string name="title_activity_place">PlaceActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="rating_value">4.4</string>
    <string name="title_value">Lorem Ipsum</string>
    <string name="go_there">Go there</string>
    <string name="dolor_sit_amet">dolor sit amet</string>
    <string name="p_wiejska_42_pozna">Półwiejska 42, Poznań</string>
    <string name="_0_5_km_away">0.5 km away</string>
    <string name="open_now">Open now</string>
    <string name="closed_now">Closed now</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language">Language</string>
    <string name="customisation">Others</string>
    <string name="theme">Theme</string>
    <string name="find_place">Find place</string>
    <string name="saved_places">Saved places</string>
    <string name="polish">Polish</string>
    <string name="english">English</string>
    <string name="dawid_stawiszy_ski">Dawid Stawiszyński</string>
    <string name="github_com_xalpol12">github.com/xalpol12</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open_hamburger_menu">Open hamburger menu</string>
    <string name="about_me">About me</string>
    <string name="km_away">\km away</string>
    <string name="call_success">Called successfully</string>
    <string name="theme_changed">Theme changed</string>
    <string name="location_success">Location requested successfully</string>
    <string name="turn_on_location">Please turn on your location</string>
    <string name="location_denied">Location permission denied. App cannot function without access to GPS.</string>
    <string name="place_deleted_prompt">Place deleted</string>
    <string name="place_saved_prompt">Place saved</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="search_radius">Search radius</string>
    <string name="fetching_data_from_the_server">Fetching data from the server...</string>
    <string name="my_github_profile">My github profile</string>
</resources>