<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_find_place"
            android:icon="@drawable/ic_search_location"
            android:title="@string/find_place"/>
        <item android:id="@+id/nav_saved_places"
            android:icon="@drawable/ic_saved"
            android:title="@string/saved_places"/>
        <item
            android:id="@+id/nav_about_me"
            android:icon="@drawable/ic_about_me"
            android:title="@string/about_me"
            />
    </group>

    <item android:title="@string/customisation">
        <menu>
            <item android:id="@+id/nav_theme_mode"
                android:icon="@drawable/ic_light_mode"
                android:title="@string/theme"/>
        </menu>
    </item>



</menu>