<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/find_place_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:backgroundTint="@color/primary">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/gps_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search_location" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/find_location_button"
            android:alpha="0.6"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/find_my_location"
            android:textColorHighlight="@color/secondary"
            android:textColorHint="@color/secondary"
            android:textColorLink="@color/secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_icon"
            style="@style/button_standard_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/radius_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_layout">

        <com.google.android.material.slider.Slider
            android:id="@+id/range_slider"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/secondary"
            android:contentDescription="@string/radius_range_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:thumbColor="@color/accent"
            app:trackColor="@color/secondary" />

        <TextView
            android:id="@+id/min_range_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/inter"
            android:text="@string/min_radius_distance"
            android:textColor="@color/secondary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/range_slider" />

        <TextView
            android:id="@+id/max_range_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/inter"
            android:text="@string/max_radius_distance"
            android:textColor="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/range_slider" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/price_option_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:justifyContent="space_around"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radius_layout">

        <Button
            android:id="@+id/price_1_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:alpha="1"
            android:backgroundTint="@color/secondary"
            android:hint="@string/cheap_price_range"
            app:icon="@drawable/ic_coin_1"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/price_2_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:hint="@string/inexpensive_price_range"
            app:icon="@drawable/ic_coin_2"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="108dp" />

        <Button
            android:id="@+id/price_3_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:hint="@string/reasonable_price_range"
            app:icon="@drawable/ic_coin_3"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="195dp" />

        <Button
            android:id="@+id/price_4_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:hint="@string/expensive_price_range"
            app:icon="@drawable/ic_coin_4"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="285dp" />

    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/place_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="80dp"
        app:justifyContent="space_around"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_option_layout">

        <Button
            android:id="@+id/place_type_restaurant"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:alpha="1"
            android:backgroundTint="@color/secondary"
            app:icon="@drawable/ic_restaurant"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/place_type_bakery"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:alpha="1"
            android:backgroundTint="@color/secondary"
            app:icon="@drawable/ic_cake"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/place_type_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        app:justifyContent="space_around"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_type_layout">

        <Button
            android:id="@+id/place_type_cafe"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:alpha="1"
            android:backgroundTint="@color/secondary"
            app:icon="@drawable/ic_cafe"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/place_type_pub"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:alpha="1"
            android:backgroundTint="@color/secondary"
            app:icon="@drawable/ic_beer"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.flexbox.FlexboxLayout>

</androidx.constraintlayout.widget.ConstraintLayout>