<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/place_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="-20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/ic_save_ribbon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/place_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="3">

        <ImageView
            android:id="@+id/place_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img_default_place_photo" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/place_layout"
        android:layout_width="365dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/secondary_buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_weight="3">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place_name"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/title_value"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/rating_flexbox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                app:justifyContent="center">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_star"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="206dp" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_value"
                    android:textColor="@color/secondary"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="76dp"
                    tools:layout_editor_absoluteY="206dp" />

            </com.google.android.flexbox.FlexboxLayout>

            <TextView
                android:id="@+id/rating_count"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/dolor_sit_amet"
                android:textSize="12sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:layout_weight="2"
                android:text="@string/p_wiejska_42_pozna" />

            <TextView
                android:id="@+id/distance"
                style="@style/text_style"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/_0_5_km_away"
                android:textSize="12sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/open_now"
            style="@style/text_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/open_now"
            android:textColor="@color/accent"
            android:textSize="11sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondary_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/go_there_button"
        app:layout_constraintBottom_toTopOf="@+id/go_there_button">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/random_button"
            style="@style/button_small_rounded"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/ic_dices"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/previous_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/previous_button"
            style="@style/button_small_rounded"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/ic_arrow_back"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/random_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_there_button"
        style="@style/button_standard_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:backgroundTint="@color/accent"
        android:drawableStart="@drawable/ic_map_gps"
        android:drawableEnd="@drawable/ic_map_gps"
        android:drawablePadding="45dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/go_there"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatButton>


</androidx.constraintlayout.widget.ConstraintLayout>